@@ -266,3 +266,7 @@
 2012-01-05  Cedric Bail
 
 	* Reduce call to stat during edje_object_file_set.
+
+2012-01-06  Cedric Bail
+
+	* Unswallow object that are about to be swallowed if necessary.
